--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,51 @@
 /* You can add global styles to this file, and also import other style files */
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+// Mixins
+/** Media Queries **/
+@mixin telefono {
+  @media (min-width: #{$telefono}) {
+      @content;
+  }
+}
+
+@mixin tablet {
+  @media (min-width: #{$tablet}) {
+      @content;
+  }
+}
+@mixin MenTablet{
+  @media (max-width:#{tablet} ) {
+      @content;
+  }
+}
+
+@mixin desktop {
+  @media (min-width: #{$desktop}) {
+      @content;
+  }
+}
+@mixin grid($columnas, $espaciado ) {
+  display: grid;
+  gap: $espaciado;
+  grid-template-columns: repeat($columnas, 1fr);
+}
+
+@mixin boton($bgcolor, $display) {
+  background-color: $bgcolor;
+  color: $blanco;
+  font-weight: $bold;
+  text-decoration: none;
+  padding: 1rem 2rem;
+  text-align: center;
+  margin-top: calc($separacion / 4);
+  display: $display;
+  border: none;
+
+  &:hover{
+      background-color: darken($bgcolor, 8);
+      cursor: pointer;
+  }
+}
