Barra busqueda TODO

--- a/src/app/ofertas/pages/layout-page/layout-page.component.html
+++ b/src/app/ofertas/pages/layout-page/layout-page.component.html
@@ -1,4 +1,5 @@
-<shared-header></shared-header>
+<ofertas-header></ofertas-header>
+
 <div class="container">
   <router-outlet></router-outlet>
 </div>
