--- a/src/app/ofertas/pages/oferta-page/oferta-page.component.html
+++ b/src/app/ofertas/pages/oferta-page/oferta-page.component.html
@@ -25,4 +25,8 @@
     <p class="font-semibold">Fecha de Publicacion <span class="font-normal">{{oferta.fecha_publicacion}}</span></p>
     <p class="font-semibold">Fecha de Cierre <span class="font-normal">{{oferta.fecha_cierre}}</span></p>
   </div>
+  <button mat-button
+  [routerLink]="['/ofertas']">
+  Regresar
+  </button>
 </div>
