--- a/src/app/ofertas/components/card/card.component.html
+++ b/src/app/ofertas/components/card/card.component.html
@@ -1,35 +1,22 @@
-<!-- <mat-card class="ofert-card">
-  <mat-card-header>
-    <div mat-card-avatar class="example-header-image"></div>
-    <mat-card-title class="font-medium">{{oferta.titulo}}</mat-card-title>
-    <mat-card-subtitle>{{oferta.empresa}}</mat-card-subtitle>
-  </mat-card-header>
-  <img class="card-image" mat-card-image [src]="oferta | ofertImage" alt="Photo of a Shiba Inu">
-  <mat-card-content>
-    <p>
-      {{oferta.descripcion}}
-    </p>
-  </mat-card-content>
-  <mat-card-actions>
-    <button
-      mat-button
-      mat-raised
-      [routerLink]="['/ofertas/',oferta.id]">
-      Ver Detalles
-    </button>
-  </mat-card-actions>
-</mat-card> -->
+
 
 <mat-card class="example-card">
   <mat-card-header>
     <mat-card-title-group>
-      <mat-card-title class="font-medium">{{oferta.titulo}}</mat-card-title>
-      <mat-card-subtitle>{{oferta.empresa}}</mat-card-subtitle>
-      <img class="card-image" mat-card-image [src]="oferta | ofertImage" alt="Photo of a Shiba Inu" >
+      <mat-card-title class="font-medium">{{oferta.titulo}}</mat-card-title><br>
+
     </mat-card-title-group>
   </mat-card-header>
+
+  <div class="logo-Empresa">
+    <mat-card-subtitle class="subtitle">{{oferta.empresa}}</mat-card-subtitle>
+    <img class="card-image" mat-card-image [src]="oferta | ofertImage" alt="Photo of a Shiba Inu" >
+
+
+  </div>
+
   <mat-card-content>
-    {{oferta.descripcion}}
+    {{oferta.descripcion | slice: 0: 180 }}{{'...'}}
   </mat-card-content>
   <mat-card-actions>
     <button
