--- a/src/app/ofertas/components/card/card.component.scss
+++ b/src/app/ofertas/components/card/card.component.scss
@@ -5,5 +5,21 @@
   object-fit: contain;
   margin: 0;
   margin-bottom: 5px;
+  max-width: 50px;
+  justify-content: end;
+  margin-left: auto;
   // mix-blend-mode: color-burn;
+}
+
+
+
+.logo-Empresa{
+  display: flex;
+  justify-content: space-between;
+  margin: 0px 15px;
+
+}
+
+.subtitle{
+  margin-right: auto;
 }
