--- a/src/app/ofertas/components/header/header.component.scss
+++ b/src/app/ofertas/components/header/header.component.scss
@@ -1,23 +1,34 @@
-.shared-header{
-    // background-color: #787878;
-    padding: 10px;
-    margin-bottom: 20px;
-    .enlaces {
-      display: flex;
-      align-items: center;
-      justify-content: center; /* Esto centra los elementos horizontalmente */
-      color: #fff;
-    }
-    .logo{
-      display: flex;
-      flex-direction: row;
-      align-items: center;
-      justify-content: center;
-      text-decoration: none;
-      font-weight: 500;
-      color: #fff;
-    }
-  
+.shared-header {
+  padding: 10px;
+  margin-bottom: 20px;
+
+  .mat-toolbar-row {
+    display: flex;
+    align-items: center; /* Alinea verticalmente los elementos de la fila */
   }
-  
-  
+  .contenedor-logo{
+    .logo {
+      display: flex;
+      align-items: center;
+      justify-content: flex-start; /* Alinea el logo a la izquierda */
+      color: #fff;
+    }
+  }
+
+  .buscador {
+    display: flex;
+    align-items: center; /* Alinea verticalmente los elementos del buscador */
+    justify-content: center; /* Centra horizontalmente los elementos del buscador */
+    flex-grow: 1; /* Permite que el buscador ocupe el espacio restante */
+  }
+
+  .enlaces {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end; /* Alinea los enlaces a la derecha */
+    color: #fff;
+  }
+  .enlaces, .contenedor-logo{
+    width: 250px;
+  }
+}
